# Math-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: CMakeLists.txt  DiscreteDistributionTest.c  MatrixTest.c  TensorTest.c  VectorTest.c
src/: CMakeLists.txt  DiscreteDistribution.c  DiscreteDistribution.h  Distribution.c  Distribution.h  Eigenvector.c  Eigenvector.h  Matrix.c  Matrix.h  Tensor.c  Tensor.h  Vector.c  Vector.h
