cmake_minimum_required(VERSION 3.23)
project(Math)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_FLAGS "-O3")

find_package(util_c REQUIRED)

add_library(Math src/Distribution.c src/Distribution.h src/DiscreteDistribution.c src/DiscreteDistribution.h src/Vector.c src/Vector.h src/Eigenvector.c src/Eigenvector.h src/Matrix.c src/Matrix.h)
target_link_libraries(Math util_c::util_c)
add_executable(MatrixTest src/Distribution.c src/Distribution.h src/DiscreteDistribution.c src/DiscreteDistribution.h src/Vector.c src/Vector.h src/Eigenvector.c src/Eigenvector.h src/Matrix.c src/Matrix.h Test/MatrixTest.c)
target_link_libraries(MatrixTest util_c::util_c)
add_executable(VectorTest src/Distribution.c src/Distribution.h src/DiscreteDistribution.c src/DiscreteDistribution.h src/Vector.c src/Vector.h src/Eigenvector.c src/Eigenvector.h src/Matrix.c src/Matrix.h Test/VectorTest.c)
target_link_libraries(VectorTest util_c::util_c)
add_executable(DiscreteDistributionTest src/Distribution.c src/Distribution.h src/DiscreteDistribution.c src/DiscreteDistribution.h src/Vector.c src/Vector.h src/Eigenvector.c src/Eigenvector.h src/Matrix.c src/Matrix.h Test/DiscreteDistributionTest.c)
target_link_libraries(DiscreteDistributionTest util_c::util_c)
